# prefetcharr

./: ATTRIBUTION.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  about.hbs  about.toml  deny.toml  my-prefetcharr.xml
.github/workflows/: advisories.yml  ci.yml  publish.yml
docker/: cmd.sh
src/: config.rs  fake_sonarr.rs  filter.rs  jellyfin.rs  main.rs  media_server.rs  once.rs  process.rs  sonarr.rs  util.rs
src/media_server/: emby.rs  embyfin.rs  jellyfin.rs  plex.rs  tautulli.rs
src/util/: once.rs
