[package]
name = "prefetcharr"
version = "0.8.2"
edition = "2021"
authors = ["Paul Hüber"]
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "string"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
reqwest = { version = "0", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time", "sync"] }
tokio-util = "0.7.13"
tracing = "0"
tracing-appender = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

[dev-dependencies]
httpmock = "0.7.0"

[profile.release]
strip = "debuginfo"
lto = "fat"
codegen-units = 1
