[package]
name = "prefetcharr"
version = "1.4.0"
edition = "2024"
authors = ["Paul Hüber"]
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "string"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
reqwest = { version = "0", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
rustls = { version = "0.23.23", default-features = false }
rustls-platform-verifier = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time", "sync"] }
tokio-util = "0.7.13"
toml = "0.8.23"
tracing = "0"
tracing-appender = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

[dev-dependencies]
httpmock = "0.7.0"
test-log = { version = "0.2.18", default-features = false, features = ["color", "trace"] }

[profile.release]
strip = "debuginfo"
lto = "fat"
codegen-units = 1
